Update .gitignore and requirements.txt

--- a/mlops-project/requirements.txt
+++ b/mlops-project/requirements.txt
@@ -8,4 +8,17 @@ pytest
 python-dotenv
 tqdm
 typer
--e .
+
+# Data analysis & ML
+pandas
+numpy
+scikit-learn
+matplotlib
+seaborn
+jupyter
+notebook
+
+# DVC con soporte para S3
+dvc[s3]
+
+# -e .   # desactivado porque requiere Python <=3.11
