feat/initialize-mlflow

--- a/mlops-project/.gitignore
+++ b/mlops-project/.gitignore
@@ -191,3 +191,17 @@ cython_debug/
 .pypirc
 /data
 .venv/
+
+# MLflow - Quickstart environment (fully ignored for learning/experimentation)
+/mlflow/quickstart/
+
+# MLflow - Dev environment (databases and artifacts ignored, metadata can be tracked)
+/mlflow/dev/*.db
+/mlflow/dev/*.db-shm
+/mlflow/dev/*.db-wal
+/mlflow/dev/mlruns/
+/mlflow/dev/artifacts/
+
+# MLflow - Temporary outputs from notebooks
+outputs/
+mlruns/
